--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,16 +10,17 @@
 
 .jumbotron {
 	min-height: 600px;
-	background-color: #8A590A;
+	/*background-color: #8A590A;*/
 	border-radius: 5px;
-	opacity: 0.5px;
+	
 	margin-bottom: 0px;
+	background: rgba(120, 120, 120, 0.5);
 	
 }
 
 .lead {
 	text-align: center;
-	color: #FDDDA8;
+	color: white;
 	
 }
 
@@ -45,10 +46,10 @@ body {
 }
 
 .background {
-	background: rgba(5, 5, 5, 0.5);
+/*	background: rgba(120, 120, 120, 0.5);
 	
 	width: 100%;
-	height: 100%;
+	height: 100%;*/
 }
 
 .me{
@@ -129,3 +130,4 @@ hr {
 a:hover {
 	color: white;
 }
+
